[gd_scene load_steps=15 format=3 uid="uid://lqqdf6iy7fnl"]

[ext_resource type="Script" uid="uid://bv5tuq3hbtquc" path="res://scripts/managers/audio_manager.gd" id="1_v6v0x"]
[ext_resource type="AudioStream" uid="uid://dhop1owl4ecir" path="res://assets/sfx/global/sfx_click_pop.wav" id="2_5jw7j"]
[ext_resource type="AudioStream" uid="uid://bp72dis3qtl7y" path="res://assets/sfx/music/isaacs_pastry_game.mp3" id="3_4tesi"]
[ext_resource type="AudioStream" uid="uid://c26ail7w2v0q6" path="res://assets/sfx/minigame/sfx_collect_item.wav" id="3_5jw7j"]
[ext_resource type="AudioStream" uid="uid://dk8s6u2tjd7oh" path="res://assets/sfx/minigame/sfx_whisking.wav" id="4_v5v75"]
[ext_resource type="AudioStream" uid="uid://bddfrlou8uomc" path="res://assets/sfx/minigame/sfx_recipe_good.wav" id="5_5jw7j"]
[ext_resource type="AudioStream" uid="uid://cfleepp1gltky" path="res://assets/sfx/minigame/sfx_recipe_bad.wav" id="6_5jw7j"]
[ext_resource type="AudioStream" uid="uid://cmtudwflea85x" path="res://assets/sfx/minigame/sfx_recipe_ready.wav" id="7_qtie0"]
[ext_resource type="AudioStream" uid="uid://1penf07f0iwh" path="res://assets/sfx/global/sfx_crowd_talking.ogg" id="8_buqc2"]
[ext_resource type="AudioStream" uid="uid://dd26nkrbbamcy" path="res://assets/sfx/global/sfx_time_up.wav" id="8_hmi33"]
[ext_resource type="AudioStream" uid="uid://cnw128el4qcw8" path="res://assets/sfx/music/isaacs_pastry_end.mp3" id="9_3uvv3"]
[ext_resource type="AudioStream" uid="uid://bqps6aqptoogf" path="res://assets/sfx/global/sfx_game_over.wav" id="9_5jw7j"]
[ext_resource type="AudioStream" uid="uid://cmde0wyadrgsg" path="res://assets/sfx/characters/sfx_newton_humming.ogg" id="9_k2lc1"]
[ext_resource type="AudioStream" uid="uid://dpdyjtmqx60se" path="res://assets/sfx/global/sfx_win.wav" id="10_5jw7j"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_v6v0x")

[node name="SFXClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5jw7j")
volume_db = -20.0
bus = &"SFX"

[node name="SFXCollectIngredient" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5jw7j")
volume_db = -6.0
bus = &"SFX"

[node name="SFXWhisking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_v5v75")
volume_db = -4.0
bus = &"SFX"

[node name="SFXRecipeGood" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5jw7j")
volume_db = -16.0
bus = &"SFX"

[node name="SFXRecipeBad" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5jw7j")
volume_db = -16.0
bus = &"SFX"

[node name="SFXRecipeReady" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qtie0")
volume_db = -16.0
bus = &"SFX"

[node name="SFXCrowdTalking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_buqc2")
volume_db = -12.0
bus = &"SFX"
parameters/looping = true

[node name="SFXNewtonHumming" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_k2lc1")
bus = &"SFX"
parameters/looping = true

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4tesi")
volume_db = -12.0
bus = &"Music"
parameters/looping = true

[node name="FinalMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3uvv3")
volume_db = -9.0
bus = &"Music"
parameters/looping = true

[node name="SFXTimeUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hmi33")
volume_db = -24.0
bus = &"SFX"

[node name="SFXGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5jw7j")
volume_db = -24.0
bus = &"SFX"

[node name="SFXWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5jw7j")
volume_db = -24.0
bus = &"SFX"
